--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -50,7 +50,7 @@
    <widget class="QLabel" name="statusLabel">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>440</x>
       <y>60</y>
       <width>211</width>
       <height>31</height>
@@ -58,6 +58,19 @@
     </property>
     <property name="text">
      <string>TextLabel</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="rescanBtn">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>180</y>
+      <width>151</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rescan</string>
     </property>
    </widget>
   </widget>
